# optimization-rust

./: Cargo.toml
examples/: minimal.rs
src/: gd.rs  line_search.rs  numeric.rs  problems.rs  sgd.rs
